fixed arrow image links to be in line with text

--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
           <a href="about.html">
             <p class="name_link_text">
               You can learn more about me here.
-            </p>
-            <div class="name_link_image">
               <img
                 src="GoogleDriveFiles/HomePage/ArrowIcon-24px.png"
                 alt="red arrow to link to page"
               />
-            </div>
+            </p>
           </a>
         </div>
       </div>
@@ -59,20 +57,18 @@
         <h2 class="project_1_header">A chef portfolio & recipe aggregator</h2>
         <p class="project_1_text">
           The average culinary artist only shares their 'portfolio' on Instagram
-          or Twitter, often times these are not redily shareable to potential
+          or Twitter, often times these are not readily shareable to potential
           employers.
         </p>
         <div class="project_link_container">
-          <a href="hearth.html">
+          <p href="hearth.html">
             <p class="project_link_text">
               View project: Hearth & Steel
-            </p>
-            <div class="project_link_image">
               <img
                 src="GoogleDriveFiles/HomePage/ArrowIcon-24px.png"
                 alt="red arrow to link to page"
               />
-            </div>
+          </p>
           </a>
         </div>
       </div>
@@ -86,16 +82,14 @@
           component images in an efficient manner.
         </p>
         <div class="project_link_container">
-          <a href="schematic.html">
+          <p href="schematic.html">
             <p class="project_link_text">
               View project: Schematic Capture
-            </p>
-            <div class="project_link_image">
               <img
                 src="GoogleDriveFiles/HomePage/ArrowIcon-24px.png"
                 alt="red arrow to link to page"
               />
-            </div>
+          </p>
           </a>
         </div>
       </div>
@@ -107,16 +101,14 @@
           texts and emails.
         </p>
         <div class="project_link_container">
-          <a href="adaptive.html">
+          <p href="adaptive.html">
             <p class="project_link_text">
               View project: AdaptiveApps Messenger
-            </p>
-            <div class="project_link_image">
               <img
                 src="GoogleDriveFiles/HomePage/ArrowIcon-24px.png"
                 alt="red arrow to link to page"
               />
-            </div>
+          </p>
           </a>
         </div>
       </div>
