--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="css/index.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -17,9 +17,9 @@
     </header>
     <nav class="navbar">
       <ul class="nav-ul">
-        <li class="nav-list-item"><a href="#">About</a></li>
+        <li class="nav-list-item"><a href="about.html">About</a></li>
         <li class="nav-list-item"><a href="#">Resume</a></li>
-        <li class="nav-list-item"><a href="#">Digital Art</a></li>
+        <li class="nav-list-item"><a href="digitialart.html">Digital Art</a></li>
         <li class="nav-list-item"><a href="#">Photography</a></li>
         <li class="nav-list-item"><a href="#">Cheesecake</a></li>
       </ul>
