updated-full-screen

--- a/digitialart.html
+++ b/digitialart.html
@@ -35,134 +35,150 @@
       </ul>
     </nav>
 
-    <main class="main-grid-container">
-      <div class="grid-item first-para">
-        From July 1999 to September 2003 (right out of High School) I studied
-        multimedia production and design. I lost quite a few of my old projects
-        due to faulty storage. Luickly I was able to salvage some works. On this
-        page you will find a handful of these projects and concepts behind them.
-      </div>
-
-      <p class="grid-item item-1 header">
-        Shirley Manson (Cosmogirl) - Illustration Final
-      </p>
-
-      <div class="grid-item item-1 pic">
-        <img
-          src="GoogleDriveFiles/DigitalArtPage/Shirley-320wX432h.jpg"
-          alt="illustration of Shirley Manson by Brian"
-        />
-      </div>
-
-      <p class="grid-item grid-item-text item-1">
-        At the time I created this, Garbage was a very influential band in my
-        life. Shirley Manson did a photo spread for Cosmogirl magazine and for
-        our illustration final, I chose this image to sketch in Adobe
-        Illustrator.
-      </p>
-
-      <!-- 
-      <div class="art-grid-item">
-        <p class="grid-item-header">
-          Oakley Ad - Illustration Midterm
+    <main class="main-flex-container">
+      <div class="flex-row flex-row-first">
+        <p class="flex-row-top-text">
+          From July 1999 to September 2003 (right out of High School) I studied
+          multimedia production and design. I lost quite a few of my old
+          projects due to faulty storage. Luickly I was able to salvage some
+          works. On this page you will find a handful of these projects and
+          concepts behind them.
         </p>
       </div>
 
-      <div class="art-grid-item">
-        <p class="grid-item-text">
-          For our illustration midterm, we were to replicate a magazine ad in
-          Adobe Illustrator. I chose this Oakley ad to showcase more advanced
-          blending techniques. I thought to not make the O in the URL exact just
-          to show that it was my own work.
-        </p>
-      </div>
-      <div class="art-grid-item">
-        <div class="art-grid-pic">
+      <div class="flex-row">
+        <div class="flex-row-first-col">
+          <p class="flex-row-header">
+            Shirley Manson (Cosmogirl) - Illustration Final
+          </p>
+
+          <p class="flex-row-text">
+            At the time I created this, Garbage was a very influential band in
+            my life. Shirley Manson did a photo spread for Cosmogirl magazine
+            and for our illustration final, I chose this image to sketch in
+            Adobe Illustrator.
+          </p>
+        </div>
+
+        <div class="flex-row-pic">
           <img
-            src="GoogleDriveFiles/DigitalArtPage/Oakley-320wX432h.jpg"
-            alt="illustration of Oakley Ad by Brian"
+            src="GoogleDriveFiles/DigitalArtPage/Shirley-320wX432h.jpg"
+            alt="illustration of Shirley Manson by Brian"
+            class="shirley"
           />
         </div>
       </div>
 
-      <div class="art-grid-item">
-        <p class="grid-item-header">
-          Human Physique Study - Illustrator Class Project
-        </p>
+      <div class="flex-row">
+        <div class="flex-row-first-col">
+          <p class="flex-row-header">
+            Oakley Ad - Illustration Midterm
+          </p>
+
+          <p class="flex-row-text">
+            For our illustration midterm, we were to replicate a magazine ad in
+            Adobe Illustrator. I chose this Oakley ad to showcase more advanced
+            blending techniques. I thought to not make the O in the URL exact
+            just to show that it was my own work.
+          </p>
+        </div>
+
+        <div class="flex-row-pic">
+          <img
+            src="GoogleDriveFiles/DigitalArtPage/Oakley-320wX432h.jpg"
+            alt="illustration of Oakley Ad by Brian"
+            class="oakley"
+          />
+        </div>
       </div>
 
-      <div class="art-grid-item">
-        <p class="grid-item-text">
-          During our course study, we were to craft a project where we traced a
-          black and white image of the human physique. While the majority of the
-          class took to the curviture of the female form, I chose the harsh
-          lines of the male form to create a postcard advertisement for a
-          ficticious volleyball team.
-        </p>
+      <div class="flex-row">
+        <div class="flex-row-first-col">
+          <p class="flex-row-header">
+            Human Physique Study - Illustrator Class Project
+          </p>
+
+          <p class="flex-row-text">
+            During our course study, we were to craft a project where we traced
+            a black and white image of the human physique. While the majority of
+            the class took to the curviture of the female form, I chose the
+            harsh lines of the male form to create a postcard advertisement for
+            a ficticious volleyball team.
+          </p>
+        </div>
+        <div class="flex-row-pic">
+          <img
+            src="GoogleDriveFiles/DigitalArtPage/ChicagoBlizzard-320wX230h.jpg"
+            alt="illustration of torso of man with arm held out for Chicago Blizzard volleyball team"
+            class="blizzard"
+          />
+        </div>
       </div>
 
-      <div class="art-grid-pic">
-        <img
-          src="GoogleDriveFiles/DigitalArtPage/ChicagoBlizzard-320wX230h.jpg"
-          alt="illustration of torso of man with arm held out for Chicago Blizzard volleyball team"
-        />
+      <div class="flex-row">
+        <div class="flex-row-first-col">
+          <p class="flex-row-header">
+            Club Montepulciano Advertisement - Side Project
+          </p>
+
+          <p class="flex-row-text">
+            I was inspired to create this postcard advertisement on my own for a
+            ficticious nightclub. This was created using Adobe Photoshop.
+          </p>
+        </div>
+
+        <div class="flex-row-second-col">
+          <div class="flex-row-pic">
+            <img
+              src="GoogleDriveFiles/DigitalArtPage/PostCardA-320wX214h.jpg"
+              alt="postcard advertisement for Club Montepulciano"
+              class="club-m-1"
+            />
+          </div>
+
+          <div class="flex-row-pic">
+            <img
+              src="GoogleDriveFiles/DigitalArtPage/PostCardB-320wX214h.jpg"
+              alt="background of postcard for Club Montepulciano"
+              class="clum-m-2"
+            />
+          </div>
+        </div>
       </div>
 
-      <div class="art-grid-item">
-        <p class="grid-item-header">
-          Club Montepulciano Advertisement - Side Project
-        </p>
-      </div>
+      <div class="flex-row">
+        <div class="flex-row-first-col">
+          <p class="flex-row-header">
+            Tuscon Jaycees Brochure - Side Project
+          </p>
 
-      <div class="art-grid-item">
-        <p class="grid-item-text">
-          I was inspired to create this postcard advertisement on my own for a
-          ficticious nightclub. This was created using Adobe Photoshop.
-        </p>
-      </div>
+          <p class="flex-row-text">
+            I was approached by a roommate, who was a member of the Jaycees, to
+            assist in redesigning their brochure from a dated plain text
+            version. Using both Adobe Photoshop and Adobe Illustrator, I drafted
+            several versions and ultimately this was the version she liked the
+            most.
+          </p>
+        </div>
 
-      <div class="art-grid-pic">
-        <img
-          src="GoogleDriveFiles/DigitalArtPage/PostCardA-320wX214h.jpg"
-          alt="postcard with eyes shining through a wave of colors with the words are you in"
-        />
-      </div>
+        <div class="flex-row-second-col">
+          <div class="flex-row-pic">
+            <img
+              src="GoogleDriveFiles/DigitalArtPage/JayceesA-320wX230h.jpg"
+              alt="postcard advertisement for Tuscon Jaycees"
+              class="tuscon-jaycees-1"
+            />
+          </div>
 
-      <div class="art-grid-pic">
-        <img
-          src="GoogleDriveFiles/DigitalArtPage/PostCardB-320wX214h.jpg"
-          alt="dark background with multiple colors coming through with the name of the venue"
-        />
+          <div class="flex-row-pic">
+            <img
+              src="GoogleDriveFiles/DigitalArtPage/JayceesB-320wX230h.jpg"
+              alt="back of brochure with details about the group"
+              class="tuscon-jaycees-2"
+            />
+          </div>
+        </div>
       </div>
-
-      <div class="art-grid-item">
-        <p class="grid-item-header">
-          Tuscon Jaycees Brochure - Side Project
-        </p>
-      </div>
-
-      <div class="art-grid-item">
-        <p class="grid-item-text">
-          I was approached by a roommate, who was a member of the Jaycees, to
-          assist in redesigning their brochure from a dated plain text version.
-          Using both Adobe Photoshop and Adobe Illustrator, I drafted several
-          versions and ultimately this was the version she liked the most.
-        </p>
-      </div>
-
-      <div class="art-grid-pic">
-        <img
-          src="GoogleDriveFiles/DigitalArtPage/JayceesA-320wX230h.jpg"
-          alt="main page of brochure in purple and pink"
-        />
-      </div>
-
-      <div class="art-grid-pic">
-        <img
-          src="GoogleDriveFiles/DigitalArtPage/JayceesB-320wX230h.jpg"
-          alt="back of brochure with details about the group"
-        />
-      </div> -->
     </main>
   </body>
 </html>
