--- a/index.html
+++ b/index.html
@@ -15,15 +15,6 @@
     <header class="go_home">
       <h2 class="header_link"><a href="index.html">Brian D. Hamilton</a></h2>
     </header>
-    <nav class="navbar">
-      <ul class="nav-ul">
-        <li class="nav-list-item"><a href="about.html">About</a></li>
-        <li class="nav-list-item"><a href="#">Resume</a></li>
-        <li class="nav-list-item"><a href="digitialart.html">Digital Art</a></li>
-        <li class="nav-list-item"><a href="#">Photography</a></li>
-        <li class="nav-list-item"><a href="#">Cheesecake</a></li>
-      </ul>
-    </nav>
 
     <div class="name_container">
       <div class="name_text_container">
@@ -61,14 +52,14 @@
           employers.
         </p>
         <div class="project_link_container">
-          <p href="hearth.html">
+          <a href="hearth.html">
             <p class="project_link_text">
               View project: Hearth & Steel
               <img
                 src="GoogleDriveFiles/HomePage/ArrowIcon-24px.png"
                 alt="red arrow to link to page"
               />
-          </p>
+            </p>
           </a>
         </div>
       </div>
@@ -82,14 +73,14 @@
           component images in an efficient manner.
         </p>
         <div class="project_link_container">
-          <p href="schematic.html">
+          <a href="schematic.html">
             <p class="project_link_text">
               View project: Schematic Capture
               <img
                 src="GoogleDriveFiles/HomePage/ArrowIcon-24px.png"
                 alt="red arrow to link to page"
               />
-          </p>
+            </p>
           </a>
         </div>
       </div>
@@ -101,14 +92,14 @@
           texts and emails.
         </p>
         <div class="project_link_container">
-          <p href="adaptive.html">
+          <a href="adaptive.html">
             <p class="project_link_text">
               View project: AdaptiveApps Messenger
               <img
                 src="GoogleDriveFiles/HomePage/ArrowIcon-24px.png"
                 alt="red arrow to link to page"
               />
-          </p>
+            </p>
           </a>
         </div>
       </div>
