--- a/photography.html
+++ b/photography.html
@@ -44,115 +44,114 @@
       </div>
     </div>
 
-      <div class="mosaic-main">
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo01-320wX240h.JPG"
-          alt="clouds at sunset"
-          class="col-1-pic pic-1"
-        />
+    <main class="mosaic-main">
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo01-320wX240h.JPG"
+        alt="clouds at sunset"
+        class="col-1-pic pic-1"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo02-320wX427h.JPG"
-          alt="orange tabby cat"
-          class="col-2-pic pic-2"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo02-320wX427h.JPG"
+        alt="orange tabby cat"
+        class="col-2-pic pic-2"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo03-320wX240h.jpg"
-          alt="tree lit up with blue lights"
-          class="col-3-pic pic-3"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo03-320wX240h.jpg"
+        alt="tree lit up with blue lights"
+        class="col-3-pic pic-3"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo04-320wX240h.jpg"
-          alt="darker orange clouds at sunset"
-          class="col-1-pic pic-4"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo04-320wX240h.jpg"
+        alt="darker orange clouds at sunset"
+        class="col-1-pic pic-4"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo05-320wX240h.jpg"
-          alt="ambulance driving by with light trails from time lapse"
-          class="col-3-pic pic-5"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo05-320wX240h.jpg"
+        alt="ambulance driving by with light trails from time lapse"
+        class="col-3-pic pic-5"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo06-320wX240h.jpg"
-          alt="black and white gate framing tree without leaves"
-          class="col-1-pic pic-6"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo06-320wX240h.jpg"
+        alt="black and white gate framing tree without leaves"
+        class="col-1-pic pic-6"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo07-320wX427h.JPG"
-          alt="clouds against blue sky"
-          class="col-2-pic pic-7"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo07-320wX427h.JPG"
+        alt="clouds against blue sky"
+        class="col-2-pic pic-7"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo08-320wX240h.jpg"
-          alt="storm clouds"
-          class="col-3-pic pic-8"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo08-320wX240h.jpg"
+        alt="storm clouds"
+        class="col-3-pic pic-8"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo09-320wX240H.png"
-          alt="black and white pic of orange tabby sleeping on carpet"
-          class="col-1-pic pic-9"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo09-320wX240H.png"
+        alt="black and white pic of orange tabby sleeping on carpet"
+        class="col-1-pic pic-9"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo10-320wX427h.JPG"
-          alt="three pink flowers"
-          class="col-2-pic pic-10"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo10-320wX427h.JPG"
+        alt="three pink flowers"
+        class="col-2-pic pic-10"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo11-320wX240h.png"
-          alt="black and white cat sleeping on a bed"
-          class="col-3-pic pic-11"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo11-320wX240h.png"
+        alt="black and white cat sleeping on a bed"
+        class="col-3-pic pic-11"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo12-320wX240h.png"
-          alt="black and white cat sitting on carpet"
-          class="col-1-pic pic-12"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo12-320wX240h.png"
+        alt="black and white cat sitting on carpet"
+        class="col-1-pic pic-12"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo13-320wX240h.png"
-          alt="looking out at raindrops on car window"
-          class="col-3-pic pic-13"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo13-320wX240h.png"
+        alt="looking out at raindrops on car window"
+        class="col-3-pic pic-13"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo14-320wX240h.png"
-          alt="black and white cat laying on carpet looking at camera"
-          class="col-1-pic pic-14"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo14-320wX240h.png"
+        alt="black and white cat laying on carpet looking at camera"
+        class="col-1-pic pic-14"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo15-320wX427h.jpg"
-          alt="black and white cat sitting at glass door"
-          class="col-2-pic pic-15"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo15-320wX427h.jpg"
+        alt="black and white cat sitting at glass door"
+        class="col-2-pic pic-15"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo16-320wX240h.png"
-          alt="single pink flower against green bush"
-          class="col-3-pic pic-16"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo16-320wX240h.png"
+        alt="single pink flower against green bush"
+        class="col-3-pic pic-16"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo17-320wX240h.jpg"
-          alt="backstage with orange light shining at the end of a dark hallway"
-          class="col-1-pic pic-17"
-        />
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo17-320wX240h.jpg"
+        alt="backstage with orange light shining at the end of a dark hallway"
+        class="col-1-pic pic-17"
+      />
 
-        <img
-          src="GoogleDriveFiles/PhotographyPage/Photo18-320wX240h.jpg"
-          alt="foggy sunrise looking at city buildings in background"
-          class="col-3-pic pic-18"
-        />
-      </div>
+      <img
+        src="GoogleDriveFiles/PhotographyPage/Photo18-320wX240h.jpg"
+        alt="foggy sunrise looking at city buildings in background"
+        class="col-3-pic pic-18"
+      />
     </main>
   </body>
 </html>
