Updated adaptive to adaptiv to match company name

--- a/adaptiv.html
+++ b/adaptiv.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
-    <link href="css/adaptive.css" rel="stylesheet" type="text/css" />
+    <link href="css/adaptiv.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
       <div class="head-images">
         <img
           src="GoogleDriveFiles/AdaptivAppsMessengerPage/AdaptivApps-01-1000wX625h.png"
-          alt="Adaptive Apps Messenger app screenshot"
+          alt="adaptiv Apps Messenger app screenshot"
         />
       </div>
 
@@ -64,7 +64,7 @@
             The core challenges were the
             <a class="red bold">existence of many competitors</a> to a messenger
             feature. Facebook Messenger, Telegram, Kik and others already have
-            many of the features that AdaptiveApps was needing.
+            many of the features that AdaptivApps was needing.
           </div>
           <img
             src="GoogleDriveFiles/AdaptivAppsMessengerPage/AdaptivApps-02-187wX160h.png"
@@ -77,7 +77,7 @@
         <h3 class="row-title">Broadcasting resolutions</h3>
         <div class="row-info-50">
           <div class="row-text">
-            The primary goal was to ensure that AdaptiveApps
+            The primary goal was to ensure that adaptivApps
             <a class="red bold"
               >had full control over the messenger feature from top to
               bottom.</a
@@ -106,7 +106,7 @@
             <a class="red bold"
               >not in compliance with accessibility regulations.</a
             >
-            Therefore in building AdaptiveApps messenger,
+            Therefore in building adaptivApps messenger,
             <a class="red bold">animated gif files could not be included.</a>
           </div>
           <img
@@ -307,9 +307,7 @@
           />
         </div>
         <div class="row-info-100">
-          <div class="caption">
-            This screen shows one-to-one message.
-          </div>
+          <div class="caption">This screen shows one-to-one message.</div>
         </div>
         <div class="row-images full-width">
           <img
@@ -487,7 +485,7 @@
         <div class="row-info-100">
           <div class="caption">
             With this screen, I added the 'Newsire' to the side menu (this was
-            also added to the final screens of AdaptiveApps Messnger)
+            also added to the final screens of AdaptivApps Messnger)
           </div>
         </div>
       </div>
@@ -512,9 +510,7 @@
 
         <div class="projects">
           <div class="hearth_container">
-            <h2 class="hearth_header">
-              A chef portfolio & recipe aggregator
-            </h2>
+            <h2 class="hearth_header">A chef portfolio & recipe aggregator</h2>
             <p class="hearth_text">
               The average culinary artist only shares their 'portfolio' on
               Instagram or Twitter, often times these are not readily shareable
