--- a/hearth.html
+++ b/hearth.html
@@ -369,9 +369,9 @@
               in texts and emails.
             </p>
             <div class="project_link_container">
-              <a href="adaptive.html">
+              <a href="adaptiv.html">
                 <p class="project_link_text">
-                  View project: AdaptiveApps Messenger
+                  View project: AdaptivApps Messenger
                   <img
                     src="GoogleDriveFiles/HomePage/ArrowIcon-24px.png"
                     alt="red arrow to link to page"
