--- a/schematic.html
+++ b/schematic.html
@@ -138,18 +138,14 @@
             src="GoogleDriveFiles/SchematicCapturePage/SchemCap-06-1000wX443h.png"
             alt="screenshot of example job sheet"
           />
-          <div class="caption">
-            An example job sheet
-          </div>
+          <div class="caption">An example job sheet</div>
         </div>
         <div class="row-images">
           <img
             src="GoogleDriveFiles/SchematicCapturePage/SchemCap-07-1000wX649h.png"
             alt="screenshot of an example schematic"
           />
-          <div class="caption">
-            An example schematic
-          </div>
+          <div class="caption">An example schematic</div>
         </div>
       </div>
 
@@ -410,9 +406,7 @@
         <h3 class="row-title">Eager to turn out more?</h3>
         <div class="projects">
           <div class="hearth_container">
-            <h2 class="hearth_header">
-              A chef portfolio & recipe aggregator
-            </h2>
+            <h2 class="hearth_header">A chef portfolio & recipe aggregator</h2>
             <p class="hearth_text">
               The average culinary artist only shares their 'portfolio' on
               Instagram or Twitter, often times these are not readily shareable
@@ -442,7 +436,7 @@
             <div class="project_link_container">
               <a href="adaptive.html">
                 <p class="project_link_text">
-                  View project: AdaptiveApps Messenger
+                  View project: AdaptivApps Messenger
                   <img
                     src="GoogleDriveFiles/HomePage/ArrowIcon-24px.png"
                     alt="red arrow to link to page"
