Updated margins and links

--- a/about.html
+++ b/about.html
@@ -19,7 +19,9 @@
       <ul class="nav-ul">
         <li class="nav-list-item" id="about"><a href="about.html">About</a></li>
         <p class="nav-line">|</p>
-        <li class="nav-list-item" id="resume"><a href="#">Resume</a></li>
+        <li class="nav-list-item" id="resume">
+          <a href="BDHResume.pdf" target="_blank">Resume</a>
+        </li>
         <p class="nav-line">|</p>
         <li class="nav-list-item" id="digital_art">
           <a href="digitialart.html">Digital Art</a>
@@ -70,22 +72,47 @@
     <footer class="contact-info">
       <p class="find-me">You can find me here:</p>
       <div class="contact-icons">
-        <img
-          src="GoogleDriveFiles/AboutPage/LinkedInIcon-32px.png"
-          alt="linkedIn Icon"
-        />
-        <img
-          src="GoogleDriveFiles/AboutPage/TwitterIcon-32px.png"
-          alt="twitter icon"
-        />
-        <img
-          src="GoogleDriveFiles/AboutPage/YouTubeIcon-32px.png"
-          alt="youtube icon"
-        />
-        <img
-          src="GoogleDriveFiles/AboutPage/MediumIcon-32px.png"
-          alt="medium icon"
-        />
+        <a
+          href="https://www.linkedin.com/in/harzakthebear/"
+          target="_blank"
+          class="linked-in"
+          ><img
+            src="GoogleDriveFiles/AboutPage/LinkedInIcon-32px.png"
+            alt="linkedIn Icon"
+          />
+        </a>
+
+        <a
+          href="https://twitter.com/HarzakTheBear"
+          target="_blank"
+          class="twitter"
+        >
+          <img
+            src="GoogleDriveFiles/AboutPage/TwitterIcon-32px.png"
+            alt="twitter icon"
+        /></a>
+
+        <a
+          href="https://www.youtube.com/channel/UCDtzINH5Yquqm1O5G1hIhOg"
+          target="_blank"
+          class="youtube"
+        >
+          <img
+            src="GoogleDriveFiles/AboutPage/YouTubeIcon-32px.png"
+            alt="youtube icon"
+          />
+        </a>
+
+        <a
+          href="https://medium.com/@brian.david.hamilton"
+          target="_blank"
+          class="medium"
+        >
+          <img
+            src="GoogleDriveFiles/AboutPage/MediumIcon-32px.png"
+            alt="medium icon"
+          />
+        </a>
       </div>
       <p class="contact-email red bold">Brian.David.Hamilton@Outlook.com</p>
     </footer>
