--- a/digitialart.html
+++ b/digitialart.html
@@ -19,7 +19,9 @@
       <ul class="nav-ul">
         <li class="nav-list-item" id="about"><a href="about.html">About</a></li>
         <p class="nav-line">|</p>
-        <li class="nav-list-item" id="resume"><a href="#">Resume</a></li>
+        <li class="nav-list-item" id="resume">
+          <a href="BDHResume.pdf" target="_blank">Resume</a>
+        </li>
         <p class="nav-line">|</p>
         <li class="nav-list-item" id="digital_art">
           <a href="digitialart.html">Digital Art</a>
@@ -71,9 +73,7 @@
 
       <div class="flex-row">
         <div class="flex-row-first-col">
-          <p class="flex-row-header">
-            Oakley Ad - Illustration Midterm
-          </p>
+          <p class="flex-row-header">Oakley Ad - Illustration Midterm</p>
 
           <p class="flex-row-text">
             For our illustration midterm, we were to replicate a magazine ad in
@@ -148,9 +148,7 @@
 
       <div class="flex-row">
         <div class="flex-row-first-col">
-          <p class="flex-row-header">
-            Tuscon Jaycees Brochure - Side Project
-          </p>
+          <p class="flex-row-header">Tuscon Jaycees Brochure - Side Project</p>
 
           <p class="flex-row-text">
             I was approached by a roommate, who was a member of the Jaycees, to
