--- a/schematic.html
+++ b/schematic.html
@@ -434,7 +434,7 @@
               in texts and emails.
             </p>
             <div class="project_link_container">
-              <a href="adaptive.html">
+              <a href="adaptiv.html">
                 <p class="project_link_text">
                   View project: AdaptivApps Messenger
                   <img
