--- a/photography.html
+++ b/photography.html
@@ -19,7 +19,9 @@
       <ul class="nav-ul">
         <li class="nav-list-item" id="about"><a href="about.html">About</a></li>
         <p class="nav-line">|</p>
-        <li class="nav-list-item" id="resume"><a href="#">Resume</a></li>
+        <li class="nav-list-item" id="resume">
+          <a href="BDHResume.pdf" target="_blank">Resume</a>
+        </li>
         <p class="nav-line">|</p>
         <li class="nav-list-item" id="digital_art">
           <a href="digitialart.html">Digital Art</a>
