Updated colors and added project title on index

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <div class="projects">
       <div class="project_1_container">
+        <h2 class="projects_title">Projects:</h2>
         <h2 class="project_1_header">A chef portfolio & recipe aggregator</h2>
         <p class="project_1_text">
           The average culinary artist only shares their 'portfolio' on Instagram
